# selfgated_noncartesian_reconstruction

./: .gitignore  CMakeLists.txt  README.md
cmake/: CMakeLists.txt
config/: spiral_nc_example.xml
reconstruction/: SenseGriddingReconGadget3D_Parallel.cpp
spiral/: SpiralAccumulateFast.cpp  SpiralBuffer.h  WeightsEstimationGadget.cpp
utils/: GatingandBinningGadget.cpp  util_functions.cpp  util_functions.h  window_filter.cpp  window_filter.h
utils/concomitantFieldCorrection/: mri_concomitant_field_correction.cpp  mri_concomitant_field_correction.h
utils/gpu/: CMakeLists.txt  cuda_utils.cu  cuda_utils.h
waveforms/: WaveformToTrajectory.cpp  WaveformToTrajectory.h
